fix:  iconText-telのSPでt0-b-iconText-tel__wrapに下余白がない
- https://github.com/wmssystem/buddy-theme/pull/1039

--- a/036/devStuff/src/parts/_045_iconText-tel.scss
+++ b/036/devStuff/src/parts/_045_iconText-tel.scss
@@ -348,6 +348,8 @@
     text-align: center;
     p {
       @include g-font(16, 1);
+      padding-top: 10px;
+      padding-bottom: 10px;
       a {
         color: $g-textColor;
       }
@@ -367,6 +369,7 @@
 
     img {
       width: 25%;
+      vertical-align: top;
     }
 
     &__ruby {
